--- a/src/common/css/minin.scss
+++ b/src/common/css/minin.scss
@@ -1,3 +1,21 @@
-@function border-1px(){
+// 下边框1px
+@mixin border-1px($color) {
+    position: relative;
+    &::after{
+        display: block;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        border-top:1px solid $color;
+        content: ''
+    }
+}
 
+
+@mixin bgImg($url) {
+    background-image: url($url+'@2x.png');
+    @media (-webkit-min-device-pixel-ratio:3),(min-device-pixel-ratio:3){
+        background-image: url($url+'@3x.png');
+    }
 }
