完成头部组件和商品组件的部分  将图标抽离成组件

--- a/src/common/css/base.scss
+++ b/src/common/css/base.scss
@@ -3,7 +3,19 @@ body,html{
     font-weight: 200px;
     font-family:'PingFang SC','STHeitiSC-Light'
 }
-
+// 清除浮动的样式
+.clearfix{
+    display: inline-block;
+    &::after{
+        display: block;
+        content: '';
+       height:0;
+       line-height: 0;
+        width: 0;
+        clear: both;
+        visibility: hidden;
+    }
+}
 
 
 
