初步完成对better-scroll插件的使用

--- a/src/common/css/minin.scss
+++ b/src/common/css/minin.scss
@@ -12,6 +12,13 @@
     }
 }
 
+@mixin border-none(){
+    position: relative;
+    &::after{
+        display: none;
+    }
+}
+
 
 @mixin bgImg($url) {
     background-image: url($url+'@2x.png');
